Help Desk Added

--- a/help_desk/icc.html
+++ b/help_desk/icc.html
@@ -205,7 +205,7 @@
                         <th colspan="5" style="text-align: center;">
 
                             Government Polytechnic College, Bathinda <br>
-                            Internal Complaint Committee
+                            Internal Complaint Committee for Gender Sensitization, Prevention and Prohibition of Sexual Harassment of Women Employees and Students <br> 
 
                         </th>
 
