--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@ https://templatemo.com/tm-569-edu-meeting
                           <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
                           <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
                           <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                          <li><a href="help_desk/icc.html">Internal Complaint Committee</a></li>
+                          <li><a href="help_desk/scst.html">Anti-discrimination cell</a></li>
                         </ul>
                           </li>
                           </ul>
@@ -386,40 +388,37 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="down-content">
                     <div>
                       <p style="margin: auto;
-                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
-                        <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
-                      </p>
-                      <p style="margin: auto;padding-top: 15px; 
                       padding-bottom:15px; border-bottom:1px solid gray">
-                        <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
+                        <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">⮕ Grievance Redressal</a>
                       </p>
-                      <p style="margin: auto;padding-top: 15px; 
-                      padding-bottom:15px; border-bottom:1px solid gray">
-                        <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
-                      </p>
-                      <p style="margin: auto;padding-top: 15px; 
-                      padding-bottom:10px;">
-                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
-                      </p>
-                    </div>
-                    <div>
                       <p style="margin: auto;
                       padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
-                        <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">Grievance Redressal</a>
+                        <a href="https://connect.punjab.gov.in/" style="font-size:18px;">⮕ Unified Call Center (1100)</a>
                       </p>
-                      <p style="margin: auto;padding-top: 15px; 
-                      padding-bottom:15px; border-bottom:1px solid gray">
-                        <a href="help_desk/icc.html" style="font-size:18px;">Internal Complaint Committee</a>
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray;font-size:18px;
+                      color:#6f0000;font-weight:bold;">⮕ 24 x 7 Anti Ragging Help Line <br> 1800-180-5522
                       </p>
-                      <p style="margin: auto;padding-top: 15px; 
-                      padding-bottom:15px; border-bottom:1px solid gray">
-                        <a href="help_desk/scstcommittee.html" style="font-size:18px;">SC/ ST Committee</a>
+                      
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
+                        <a href="help_desk/icc.html" style="font-size:18px;">⮕ Gender Sensitization</a>
+                      </p>
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
+                        <a href="sub_header/citizen_charter.html" style="font-size:18px;">⮕ Citizen Charter and RTI</a>
+                      </p>
+                      <p style="margin: auto;
+                      padding-bottom:15px; padding-top: 15px; border-bottom:1px solid gray">
+                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ Student Counsellor</a>
                       </p>
                       <p style="margin: auto;padding-top: 15px; 
                       padding-bottom:10px;">
-                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">Student Counsellor</a>
+                        <a href="help_desk/student_counsellor.html" style="font-size:18px;">⮕ College Help Line (0164-2246394) <br>
+                        <a href="mailto:gpcbathinda@punjab.gov.in" style="font-size:18px;">gpcbathinda@punjab.gov.in</a></a>
                       </p>
                     </div>
+                    
 
                   </div>
                 </div>
