principal message, visionmission older

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <li class="has-sub">
                         <a href="javascript:void(0)">Important Links</a>
                         <ul  style="width:350px" class="sub-menu">
+                          <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                           <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
                           <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
                           <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
@@ -224,6 +225,11 @@ https://templatemo.com/tm-569-edu-meeting
                       <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/rent_contract_22_23.pdf" target="_blank">
                           Rent Contract of Canteen and Tuck Shop on Contractual Basis for 2022-23
+                        </a>
+                      </li>
+                      <li>
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.pgrkam.com/" target="_blank">
+                          Punjab Ghar Ghar Rojgar
                         </a>
                       </li>
                       <li>
@@ -388,7 +394,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <div class="down-content">
                     <div>
                       <p style="margin: auto;
-                      padding-bottom:15px; border-bottom:1px solid gray">
+                      padding-bottom:15px; padding-top: 5px; border-bottom:1px solid gray">
                         <a href="help_desk/grievance_redressal_committee.html" style="font-size:18px;">⮕ Grievance Redressal</a>
                       </p>
                       <p style="margin: auto;
