--- a/sub_header/placements.html
+++ b/sub_header/placements.html
@@ -203,38 +203,56 @@
                         The Training & Placement Cell of Government Polytechnic College, Bathinda is in the forefront of activities, bringing corporate close to the campus and encouraging them to establish facilities to cater to the needs of the students. It is playing a pivotal role in counseling and guiding the students for their successful career, which is a crucial interface between the stages of completion of academic program of the students and their entry into the job market. Its aim is to provide career guidance and placement opportunities to all students studying in Government Polytechnic College, Bathinda. Training and Placement Cell arranges and coordinates various programs that aim at moulding the students so as to meet the industry expectations in their career building and in turn bring laurels to the parent institution. The Training & Placement Cell sincerely believes in imparting comprehensive training to the students to face the challenges of the dynamic and demanding job market and build a successful career for themselves
                     </p>
 
-                    <h3 class="dept-placement dept-block">Placement Details (Last Three Years)</h3>
-
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/aa/placement.html" target="_blank">Placement Details- Architectural Assistantship</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/ce/placement.html" target="_blank">Placement Details- Civil Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/cse/placement.html" target="_blank">Placement Details- Computer Science &amp; Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/ee/placement.html" target="_blank">Placement Details- Electrical Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/ece/placement.html" target="_blank">Placement Details- Electronics &amp; Communications Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/it/placement.html" target="_blank">Placement Details- Information Technology</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/me/placement.html" target="_blank">Placement Details- Mechanical Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/pie/placement.html" target="_blank">Placement Details- Production &amp; Industrial Engineering</a>
-                      </p>
-                      <p style="margin-top: 20px;">
-                        <a href="../departments/pharmacy/placement.html" target="_blank">Placement Details- D. Pharmacy</a>
-                      </p>
-                 <!-- <div class="tnp-team">
-                    <h4>Training &amp; Placement Team</h4>
-                 </div> -->
+                    <div class="placement-inner-text">
+                      <div class="placement-details">
+                        <h5 class="dept-placement dept-block">Placement Details (Last Three Years)</h5>
+  
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/aa/placement.html" target="_blank">⮕ Placement Details- Architectural Assistantship</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/ce/placement.html" target="_blank">⮕ Placement Details- Civil Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/cse/placement.html" target="_blank">⮕ Placement Details- Computer Science &amp; Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/ee/placement.html" target="_blank">⮕ Placement Details- Electrical Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/ece/placement.html" target="_blank">⮕ Placement Details- Electronics &amp; Communications Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/it/placement.html" target="_blank">⮕ Placement Details- Information Technology</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/me/placement.html" target="_blank">⮕ Placement Details- Mechanical Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/pie/placement.html" target="_blank">⮕ Placement Details- Production &amp; Industrial Engineering</a>
+                        </p>
+                        <p style="margin-top: 20px;">
+                          <a href="../departments/pharmacy/placement.html" target="_blank">⮕ Placement Details- D. Pharmacy</a>
+                        </p>
+                      </div>
+                   <!-- <div class="tnp-team">
+                      <h4>Training &amp; Placement Team</h4>
+                   </div> -->
+                   <div class="placement-portal">
+                    <h5 class="dept-placement dept-block">Important Web Portal </h5>
+                    
+                    <p style="margin-top: 20px;">
+                      <a href="http://www.pgrkam.com/" target="_blank">⮕ National Career Service</a>
+                    </p>
+                   <p style="margin-top: 20px;">
+                     <a href="http://www.pgrkam.com/" target="_blank">⮕ Punjab Ghar Ghar Rojgar</a>
+                   </p>
+                   <p style="margin-top: 20px;">
+                    <a href="http://www.employmentnews.gov.in/" target="_blank">⮕ Employment News</a>
+                  </p>
+                   
+                   </div>
+                    </div>
               </div>
             </div>
             <div class="col-lg-12">
