--- a/help_desk/scst.html
+++ b/help_desk/scst.html
@@ -69,7 +69,7 @@
         <div class="col-lg-3 col-sm-3">
           <div class="right-icons">
             <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://facebook.com/gpc.bathinda.50" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
