--- a/sub_header/placements.html
+++ b/sub_header/placements.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Template Mo">
+    <meta name="author" content="GPC Bathinda">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <title>GPC Bathinda</title>
@@ -69,7 +69,7 @@
         <div class="col-lg-3 col-sm-3">
           <div class="right-icons">
             <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://facebook.com/gpc.bathinda.50" target="_blank"><i class="fa fa-facebook"></i></a></li>
               <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
