--- a/departments/ce/home.html
+++ b/departments/ce/home.html
@@ -207,7 +207,7 @@
                   </div> -->
                 </div>
                 <div class="down-content">
-                    <h4>About Course</h4>
+                    <h4>About Program</h4>
                     <p style="text-align: justify;">
                         
                       </p>
