Applied Science OK

--- a/departments/applied/contact.html
+++ b/departments/applied/contact.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Template Mo">
+    <meta name="author" content="GPC Bathinda">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <title>GPC Bathinda</title>
@@ -68,7 +68,7 @@
         <div class="col-lg-3 col-sm-3">
           <div class="right-icons">
             <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://facebook.com/gpc.bathinda.50"><i class="fa fa-facebook"></i></a></li>
               <li><a href="mailto:gpcbathinda@punjab.gov.in"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
@@ -153,8 +153,12 @@
                     <li class="has-sub">
                       <a href="javascript:void(0)">Important Links</a>
                       <ul  style="width:350px" class="sub-menu">
+                        <li><a href="http://www.pgrkam.com/" target="_blank">Punjab Ghar Ghar Rozgar</a></li>
                         <li><a href="https://scholarships.gov.in/" target="_blank">National Scholarship Portal</a></li>
                         <li><a href="http://www.scholarships.punjab.gov.in/Default.aspx" target="_blank">Scholarship Portal (Govt. of Punjab)</a></li>
+                        <li><a href="https://connect.punjab.gov.in/">Punjab Grievance Redressal Portal</a></li>
+                        <li><a href="../../help_desk/icc.html">Internal Complaint Committee</a></li>
+                        <li><a href="../../help_desk/scst.html">Anti-discrimination cell</a></li>
                         </ul>
                         </li>
                         </ul>
@@ -180,7 +184,7 @@
     <div class="col-lg-12">
         
       <!-- <h6>Get all details</h6> -->
-      <h2>Department of Applied Sciences</h2>
+      <h2><a href="home.html" class="dept-home-link">Department of Applied Sciences</a></h2>
       
     </div>
   </div>
@@ -293,21 +297,71 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-12">
-            <div class="main-button-red" style="margin-bottom: 20px;">
-              <a href="home.html" style="width:fit-content">Back To Department Home Page</a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="footer">
-    <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
-        <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
-  </div>
 </section>
-
+<section class="contact-us" id="contact">
+  <div class="footer-information">
+   <div class="inst-basic-information">
+     <h4>Information</h4>
+     <p style="line-height: 2.5rem;">Government Polytechnic College Bathinda <br>
+     BibiWala Road, 151001 </p>
+     <p>
+       <span style="font-size: 20px;">📧</span> <a href="mailto:gpcbathinda@punjab.gov.in" style="color:white"> gpcbathinda@punjab.gov.in</a>
+     </p> 
+     <p>
+       <span style="font-size: 20px;color:white;">&#9743;</span> <a href="tel:0164-2246394" style="color:white"> 0164-2246394</a>
+     </p> 
+   </div>
+   <div class="about-us">
+     <h4>
+       About Us
+     </h4>
+     <p>
+       <a href="../../aboutus/organization.html" style="color:white;">&#9654; Organization</a>
+     </p>
+     <p>
+       <a href="../../aboutus/principal_message.html" style="color:white;">&#9654; Principal&apos;s Message</a>
+     </p>
+     <p>
+       <a href="../../aboutus/vision_mission.html" style="color:white;">&#9654; Vision &amp; Mission</a>
+     </p>
+     <p>
+       <a href="../../aboutus/history.html" style="color:white;">&#9654; History</a>
+     </p>
+   </div>
+   <div class="impt-link">
+     <h4>
+       Important Links
+     </h4>
+     <p>
+       <a href="https://connect.punjab.gov.in/" target="_blank" style="color:white;">&#9654; Unified Portal (1100)</a>
+     </p>
+     <p>
+       <a href="../../sub_header/placements.html" style="color:white;">&#9654; Placements</a>
+     </p>
+     <p>
+       <a href="https://internship.aicte-india.org/" style="color:white;">&#9654; AICTE Internship Portal</a>
+     </p>
+     <p>
+       <a href="../../help_desk/grievance_redressal_committee.html" style="color:white;">&#9654; Grievance Redressal</a>
+     </p>
+   </div>
+   <div class="footer-map">
+     <h4>Locate Us</h4>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6894.486784212091!2d74.96340600000002!3d30.230135!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc7ab25095917fa0d!2sGovernment%20Polytechnic%20College!5e0!3m2!1sen!2sus!4v1658305145477!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </div>
+   
+  </div>
+ </div>
+ <div class="footer">
+   <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
+       <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
+  
+ </div>
+</section>
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
