Revised Rent Contract

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ https://templatemo.com/tm-569-edu-meeting
                         </a>
                       </li>
                       <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/rent_contract_22_23.pdf" target="_blank">
-                          Rent Contract of Canteen and Tuck Shop on Contractual Basis for 2022-23
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/rent_contract_canteen-22_23_revised.pdf" target="_blank">
+                          Rent Contract of Canteen and Tuck Shop on Contractual Basis for 2022-23- Revised
                         </a>
                       </li>
                       <li>
