logo_75_year_update

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="col-12">
               <nav class="main-nav">
                 <a href="index.html">
-                  <img src="assets/images/logo.jpeg" class="logo" alt="">
+                  <img src="assets/images/logo.jpg" class="logo" alt="">
                 </a>
                 <ul class="nav">
                   <li><a href="index.html" >Home</a></li>
