--- a/academics_admissions/academic_calendar.html
+++ b/academics_admissions/academic_calendar.html
@@ -195,8 +195,15 @@
                    
                      <h4 class="block-dept">Academic Calender</h4>
                      <p> 
+                      <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
+                      <a href="../assets/files/Academic-Cal-2022-23.PDF" target="_blank">Academic Calender For 2022-23 (Odd Semester)-Updated</a> 
+                  </p>
+
+                  <br/><br>
+                    
+                     <p> 
                         <img style="height: 30px;width:30px;" src="../assets/images/pdfnotification.svg" alt="" srcset="">
-                        <a href="../assets/files/Academic-Cal_June22.PDF" target="_blank">Academic Calender For 2022-23 (Odd Semester)</a> 
+                        <a href="../assets/files/Academic-Cal_June22.PDF" target="_blank">Academic Calender For 2022-23</a> 
                     </p>
                     <br/><br>
                      <p> 
