--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
-                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="http://www.punjabteched.net/news/Academic-Cal-2022-23.PDF" target="_blank">Migration Case and Re-admission Cases- Regarding
+                        <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Calendar_2022-23.PDF" target="_blank">Revised Academic Calendar (First Semester)</a>
                       </li>
                       
                       <li>
@@ -653,7 +653,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>APPLY FOR Diploma In Engg. Trades</h3>
                 <p>Apply for Diploma Program at Government Polytechnic College, Bathinda</p>
                 <div class="main-button-red">
-                  <div class="scroll-to-section"><a target="_blank" href="https://forms.gle/493dCeiWRKHoyc1h6">Apply Now For Provisional Registration</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="https://eakadamik.in/psbte_2022/">Apply Now</a></div>
               </div>
               </div>
             </div>
@@ -662,7 +662,7 @@ https://templatemo.com/tm-569-edu-meeting
                 <h3>APPLY FOR D. Pharmacy</h3>
                 <p>Apply for Diploma Program at Government Polytechnic College, Bathinda.</p>
                 <div class="main-button-yellow">
-                  <div class="scroll-to-section"><a target="_blank" href="https://forms.gle/493dCeiWRKHoyc1h6">Apply Now For Provisional Registration</a></div>
+                  <div class="scroll-to-section"><a target="_blank" href="https://eakadamik.in/psbte_2022/">Apply Now</a></div>
               </div>
               </div>
             </div>
