--- a/departments/ce/faculty.html
+++ b/departments/ce/faculty.html
@@ -240,7 +240,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                          <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/sarabjit.jpg" alt="Avatar">
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -300,9 +300,7 @@
                               </div>
                             </div>
                           </div>
-                    </div>
-                    <div class="faculty-profile">
-                        <div class="flip-card">
+                          <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/jaspreet.jpg" alt="Avatar">
@@ -332,6 +330,9 @@
                               </div>
                             </div>
                           </div>
+                    </div>
+                    <div class="faculty-profile">
+                        
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -419,16 +420,16 @@
          About Us
        </h4>
        <p>
-         <a href="../../aboutus/organization.html" style="color:white;">&#9654; Organization</a>
+         <a href="aboutus/organization.html" style="color:white;">&#9654; Organization</a>
        </p>
        <p>
-         <a href="../../aboutus/principal_message.html" style="color:white;">&#9654; Principal&apos;s Message</a>
+         <a href="aboutus/principal_message.html" style="color:white;">&#9654; Principal&apos;s Message</a>
        </p>
        <p>
-         <a href="../../aboutus/vision_mission.html" style="color:white;">&#9654; Vision &amp; Mission</a>
+         <a href="aboutus/vision_mission.html" style="color:white;">&#9654; Vision &amp; Mission</a>
        </p>
        <p>
-         <a href="../../aboutus/history.html" style="color:white;">&#9654; History</a>
+         <a href="aboutus/history.html" style="color:white;">&#9654; History</a>
        </p>
      </div>
      <div class="impt-link">
@@ -439,13 +440,13 @@
          <a href="https://connect.punjab.gov.in/" target="_blank" style="color:white;">&#9654; Unified Portal (1100)</a>
        </p>
        <p>
-         <a href="../../sub_header/placements.html" style="color:white;">&#9654; Placements</a>
+         <a href="sub_header/placements.html" style="color:white;">&#9654; Placements</a>
        </p>
        <p>
          <a href="https://internship.aicte-india.org/" style="color:white;">&#9654; AICTE Internship Portal</a>
        </p>
        <p>
-         <a href="../../help_desk/grievance_redressal_committee.html" style="color:white;">&#9654; Grievance Redressal</a>
+         <a href="help_desk/grievance_redressal_committee.html" style="color:white;">&#9654; Grievance Redressal</a>
        </p>
      </div>
      <div class="footer-map">
@@ -457,7 +458,7 @@
    </div>
    <div class="footer">
      <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
-         <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
+         <br>Design: &amp; Developed by Website Committee, GPC Bathinda.</p>
     
    </div>
  </section>
