--- a/index.html
+++ b/index.html
@@ -607,10 +607,10 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
                 <div class="down-content" style="padding-bottom: 55px;">
                   <div class="date">
-                    <h6>May <span>19</span></h6>
+                    <h6>Sep <span>5</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Prize Distribution Function</h4></a>
-                  <p>Annual Prize Distribution Function Held at GPC Bathinda.</p>
+                  <a href="#"><h4>Tree Plantation Drive</h4></a>
+                  <p>Eco Club of the institute organised a successful Tree Plantation Drive with the efforts of GPC Staff and Students.</p>
                 </div>
               </div>
             </div>
@@ -624,10 +624,10 @@ https://templatemo.com/tm-569-edu-meeting
                 </div>
                 <div class="down-content">
                   <div class="date">
-                    <h6>May <span>17</span></h6>
+                    <h6>Aug <span>25</span></h6>
                   </div>
-                  <a href="meeting-details.html"><h4>Indian Air Force Recruitment Awareness Camp </h4></a>
-                  <p>Awareness Camp regarding Recruitment in Indian Air Force Held at GPC Bathinda.</p>
+                  <a href="meeting-details.html"><h4>Seminar on Ethical Values of Good Citizen </h4></a>
+                  <p>Personality Development Club of the institute organized a seminar on Ethical Values of Good Citizen for the students.</p>
                 </div>
               </div>
             </div>
@@ -1134,7 +1134,7 @@ https://templatemo.com/tm-569-edu-meeting
     </div>
     <div class="footer">
       <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
-          <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
+          <br>Design: &amp; Developed by Website Committee, GPC Bathinda.</p>
      
     </div>
   </section>
@@ -1154,15 +1154,9 @@ https://templatemo.com/tm-569-edu-meeting
     <script src="assets/js/custom.js"></script>
     <script>
       var imgArray = [
-      'assets/images/events/annual_prize_distribution/1.jpg',
-        'assets/images/events/annual_prize_distribution/2.jpg',
-        'assets/images/events/annual_prize_distribution/3.jpg',
-        'assets/images/events/annual_prize_distribution/4.jpg',
-        'assets/images/events/annual_prize_distribution/5.jpg',
-        'assets/images/events/annual_prize_distribution/6.jpg',
-        'assets/images/events/annual_prize_distribution/7.jpg',
-        'assets/images/events/annual_prize_distribution/8.jpg',
-        'assets/images/events/annual_prize_distribution/9.jpg'
+      'assets/images/events/2022/plantation_eco_club/1.jpeg',
+      'assets/images/events/2022/plantation_eco_club/2.jpeg',
+      'assets/images/events/2022/plantation_eco_club/3.jpeg',
     ];
     var curIndex = 0;
     var imgDuration = 5000;
@@ -1178,10 +1172,11 @@ https://templatemo.com/tm-569-edu-meeting
 
     <script>
       var imgArray2 = [
-        'assets/images/events/iaf_recruitment_awareness_camp/1.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/2.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/3.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/4.jpg',
+        'assets/images/events/2022/seminar_pd_club/1.jpeg',
+        'assets/images/events/2022/seminar_pd_club/2.jpeg',
+        'assets/images/events/2022/seminar_pd_club/3.jpeg',
+        'assets/images/events/2022/seminar_pd_club/4.jpeg',
+        'assets/images/events/2022/seminar_pd_club/5.jpeg',
     ];
     var curIndex2 = 0;
     var imgDuration2 = 5000;
@@ -1195,24 +1190,7 @@ https://templatemo.com/tm-569-edu-meeting
     slideShow2();
     </script>
 
-     <script>
-      var imgArray3 = [
-        'assets/images/events/iaf_recruitment_awareness_camp/1.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/2.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/3.jpg',
-        'assets/images/events/iaf_recruitment_awareness_camp/4.jpg',
-    ];
-    var curIndex3 = 0;
-    var imgDuration3 = 5000;
-
-    function slideShow3() {
-        document.getElementById('image3').src = imgArray3[curIndex3];
-        curIndex3++;
-        if (curIndex3 == imgArray3.length) { curIndex3 = 0; }
-        setTimeout("slideShow3()", imgDuration3);
-    }
-    slideShow2();
-    </script>
+     
     <script src='assets/js/gallery.js'></script>
 </body>
 
