--- a/departments/aa/faculty.html
+++ b/departments/aa/faculty.html
@@ -360,7 +360,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flip-card">
+                          <!-- <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
                                 <img src="../../assets/images/faculty/bhavdeep.jpeg" alt="Avatar">
@@ -388,7 +388,7 @@
                                 </div>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                     </div>
                 </div>
               </div>
@@ -417,16 +417,16 @@
          About Us
        </h4>
        <p>
-         <a href="../../aboutus/organization.html" style="color:white;">&#9654; Organization</a>
+         <a href="aboutus/organization.html" style="color:white;">&#9654; Organization</a>
        </p>
        <p>
-         <a href="../../aboutus/principal_message.html" style="color:white;">&#9654; Principal&apos;s Message</a>
+         <a href="aboutus/principal_message.html" style="color:white;">&#9654; Principal&apos;s Message</a>
        </p>
        <p>
-         <a href="../../aboutus/vision_mission.html" style="color:white;">&#9654; Vision &amp; Mission</a>
+         <a href="aboutus/vision_mission.html" style="color:white;">&#9654; Vision &amp; Mission</a>
        </p>
        <p>
-         <a href="../../aboutus/history.html" style="color:white;">&#9654; History</a>
+         <a href="aboutus/history.html" style="color:white;">&#9654; History</a>
        </p>
      </div>
      <div class="impt-link">
@@ -437,13 +437,13 @@
          <a href="https://connect.punjab.gov.in/" target="_blank" style="color:white;">&#9654; Unified Portal (1100)</a>
        </p>
        <p>
-         <a href="../../sub_header/placements.html" style="color:white;">&#9654; Placements</a>
+         <a href="sub_header/placements.html" style="color:white;">&#9654; Placements</a>
        </p>
        <p>
          <a href="https://internship.aicte-india.org/" style="color:white;">&#9654; AICTE Internship Portal</a>
        </p>
        <p>
-         <a href="../../help_desk/grievance_redressal_committee.html" style="color:white;">&#9654; Grievance Redressal</a>
+         <a href="help_desk/grievance_redressal_committee.html" style="color:white;">&#9654; Grievance Redressal</a>
        </p>
      </div>
      <div class="footer-map">
@@ -455,7 +455,7 @@
    </div>
    <div class="footer">
      <p>Copyright © 2022 Government Polytechnic College, Bathinda. 
-         <br>Design: &amp; Developed by CSE &amp; IT Department.</p>
+         <br>Design: &amp; Developed by Website Committee, GPC Bathinda.</p>
     
    </div>
  </section>
