--- a/departments/ece/faculty.html
+++ b/departments/ece/faculty.html
@@ -207,8 +207,8 @@
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/rana.jpg" alt="Avatar">
-                                <h3>Er. Sukhwinder Partap Rana</h3>
+                                <img src="../../assets/images/faculty/manjit_singh.jpg" alt="Avatar">
+                                <h3>Er. Manjeet Singh Bhullar</h3>
                                 <h5 style="color:white;">Head of Department</h5>
                               </div>
                               <div class="flip-card-back">
@@ -226,7 +226,7 @@
                                     <h5 style="color:white;">Communication Systems</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:rani.devi1968@punjab.gov.in">
+                                    <a href="mailto:manjitsingh.bhullar@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
@@ -267,8 +267,8 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/jagdip.jpg" alt="Avatar">
-                                <h3>Er. Jagdeep Kaur Rai</h3>
+                                <img src="../../assets/images/faculty/shifali.jpg" alt="Avatar">
+                                <h3>Er. Shifali Gupta</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
                               <div class="flip-card-back">
@@ -283,10 +283,10 @@
                                     <h3>
                                         Specialization Area
                                     </h3><br/>
-                                    <h5 style="color:white;">Advanced Communication</h5>
+                                    <h5 style="color:white;">Antenna Engineering</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:jagdeep.kaurrai84@punjab.gov.in">
+                                    <a href="mailto:shifali.gupta94@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
@@ -329,7 +329,7 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="../../assets/images/faculty/ravneet.jpeg" alt="Avatar">
+                                <img src="../../assets/images/faculty/ravneet.jpg" alt="Avatar">
                                 <h3>Er. Ravneet Kaur</h3>
                                 <h5 style="color:white;">Lecturer</h5>
                               </div>
@@ -345,10 +345,40 @@
                                     <h3>
                                         Specialization Area
                                     </h3><br/>
-                                    <h5 style="color:white;">Antenna Engineering</h5>
+                                    <h5 style="color:white;">Wireless Communication</h5>
                                 </div>
                                 <div class="contact">
-                                    <a href="mailto:harcharan.singh93@punjab.gov.in">
+                                    <a href="#">
+                                        <img src="../../assets/images/email.svg" alt="" 
+                                        srcset="">
+                                    </a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img src="../../assets/images/faculty/rajwinder.jpg" alt="Avatar">
+                                <h3>Er. Rajwinder Singh</h3>
+                                <h5 style="color:white;">Lecturer</h5>
+                              </div>
+                              <div class="flip-card-back">
+                                <div class="qualification">
+                                    <h3>
+                                        Qualification
+                                    </h3><br/>
+                                    <h5 style="color:white;">B.Tech. <br>
+                                    M.Tech.</h5>
+                                </div>
+                                <div class="specialization-area">
+                                    <h3>
+                                        Specialization Area
+                                    </h3><br/>
+                                    <h5 style="color:white;">Communication Systems</h5>
+                                </div>
+                                <div class="contact">
+                                    <a href="mailto:rajwinder.singh1986@punjab.gov.in">
                                         <img src="../../assets/images/email.svg" alt="" 
                                         srcset="">
                                     </a>
