--- a/departments/ece/home.html
+++ b/departments/ece/home.html
@@ -213,8 +213,8 @@
                         <p>  This branch of Engineering has a key place in the field of computers, Information Technology, Electrical, power system operations, communication systems etc.
                         </p>
                        <div>
-                        <img src="../../assets/images/faculty/rana.jpg" alt="photo" srcset="">
-                        <figcaption>Er. Sukhwinder Partap Rana <br/> HOD ECE</figcaption>
+                        <img src="../../assets/images/faculty/manjit_singh.jpg" alt="photo" srcset="">
+                        <figcaption>Er. Manjeet Singh Bhullar<br/> HOD ECE</figcaption>
                        </div>
                       </div>
 
