--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@ https://templatemo.com/tm-569-edu-meeting
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
                       <li>
+                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_counselling_2022.pdf" target="_blank">
+                          Direct Counseling (Engineering Courses)- Admissions 2022-23
+                        </a>
+                      </li>
+                      <li>
                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/Academic-Calendar_2022-23.PDF" target="_blank">Revised Academic Calendar (First Semester)</a>
                       </li>
                       
