--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                     <marquee style="margin-bottom: 10px;" behavior="scroll" direction="up" scrollamount="2">
                     <ol>
+                     <li>
+                         <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_pharmacy_2022.pdf" target="_blank">
+                          Direct Counseling (Diploma in Pharmacy)- Admissions 2022-23
+                        </a>
+                      </li>
                       <li>
                          <img src="assets/images/news.gif" alt="" class="new-news"><a href="assets/files/direct_counselling_2022.pdf" target="_blank">
                           Direct Counseling (Engineering Courses)- Admissions 2022-23
