--- a/affiliations/pci/home.html
+++ b/affiliations/pci/home.html
@@ -199,6 +199,8 @@
                 <div class="down-content">
                   <h4>PCI Approvals For Last years</h4>
                   <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
+                  <a href="../../assets/files/pci-2022-23.pdf" target="_blank">PCI 2022-23 Approval Letter </a> </p>
+                  <p> <img style="height: 30px;width:30px;" src="../../assets/images/pdfnotification.svg" alt="" srcset="">
                   <a href="../../assets/files/pci2021.pdf" target="_blank">PCI 2021-23 Approval Letter </a> </p>
                   
                  
