office staff added

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ https://templatemo.com/tm-569-edu-meeting
                       <li><a href="departments/pharmacy/home.html">Pharmacy</a></li>
                       <li><a href="departments/applied/home.html">Applied Sciences</a></li>
                       <li><a href="departments/workshop/home.html">Workshop</a></li>
+                      <li><a href="departments/office/home.html">Office Staff</a></li>
                     </ul>
                   </li>
                   <li class="has-sub"> 
