updated CSE HoD

--- a/departments/cse/home.html
+++ b/departments/cse/home.html
@@ -217,8 +217,8 @@
                         <p>Computer Science Engg is a very demanding course in present times, as all the work of the present generation is dependent on computers. Computer Science Engg department has various software & hardware labs with adequate infrastructure with wi-fi connectivity.
                         </p>
                        <div>
-                        <img src="../../assets/images/faculty/rk_chopra.jpg" alt="photo" srcset="">
-                        <figcaption>Er. R.K. Chopra <br/> HOD CSE</figcaption>
+                        <img src="../../assets/images/faculty/sushil.jpg" alt="photo" srcset="">
+                        <figcaption>Dr. Sushil Kumar <br/> Officer In-Charge</figcaption>
                        </div>
                       </div>
 
