--- a/departments/cse/faculty.html
+++ b/departments/cse/faculty.html
@@ -209,7 +209,7 @@
                 <div class="down-content">
                     <h4 class="dept-block">Faculty &amp;Non Teaching Members</h4>
                     <div class="faculty-profile">
-                      <div class="flip-card">
+                      <!--<div class="flip-card">
                         <div class="flip-card-inner">
                           <div class="flip-card-front">
                             <img src="../../assets/images/faculty/rk_chopra.jpg" alt="Avatar">
@@ -238,7 +238,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
+                      </div>-->
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
